--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#admin-login" id="admin-login-link">Admin Login</a></li>
       </ul>
     </nav>
   </header>
 
   <section id="home" class="hero">
     <h1>Welcome to Frey Studios</h1>
-    <p>Masterpieces being shared to the rest of the world</p>
+    <p>artpieces ngl</p>
   </section>
 
   <section id="portfolio" class="portfolio">
@@ -47,12 +45,16 @@
         <img src="images/ChangliLineWork.jpg" alt="Changli">
         <p>ChangliLineWork</p>
       </div>
+      <div class="art-item">
+        <img src="images/changlicolou1.png" alt="changliColour">
+        <p>ChangliRender</p>
+      </div>
     </div>
   </section>
 
   <section id="about" class="about">
     <h2>About Us</h2>
-    <p>Frey Studios is a creative design company specializing in innovative art and design solutions. Our team is dedicated to pushing the boundaries of creativity.</p>
+    <p>I enjoy making art, and posting it, my youtube is www.youtube.com/@YaeMiko-vx5gd feel free to check it out!</p>
   </section>
 
   <footer>
