--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="gallery" id="gallery">
       <!-- Existing art items -->
       <div class="art-item">
-        <img src="images/Shinao1.1.png" alt="Shinao">
-        <p>Shinao</p>
+        <img src="images/LelouchFN.png" alt="lelouch">
+        <p>Lelouch</p>
       </div>
       <div class="art-item">
         <img src="images/Kama.jpg" alt="Kama">
@@ -47,12 +47,36 @@
         <img src="images/ChangliLineWork.jpg" alt="Changli">
         <p>ChangliLineWork</p>
       </div>
+      <div class="art-item">
+        <img src="images/3DDesign.png" alt="BlenderDesign">
+        <p>BlenderDesign</p>
+      </div>
+      <div class="art-item">
+        <img src="images/ArleLogo.png" alt="PossibleLogoDesign">
+        <p>PossibleLogoDesign</p>
+      </div>
+      <div class="art-item">
+        <img src="images/shirouStylized.png" alt="Shirou">
+        <p>Shirou</p>
+      </div>
+      <div class="art-item">
+        <img src="images/BlenderDesign3D.png" alt="BlenderDesign2">
+        <p>BlenderDesign2</p>
+      </div>
+      <div class="art-item">
+        <img src="images/Gilgamesh.png" alt="gilgamesh">
+        <p>gilgamesh</p>
+      </div>
+      <div class="art-item">
+        <img src="images/handDrawn.png" alt="Hand Drawn">
+        <p>Hand Drawn</p>
+      </div>
     </div>
   </section>
 
   <section id="about" class="about">
     <h2>About Us</h2>
-    <p>Frey Studios is a creative design company specializing in innovative art and design solutions. Our team is dedicated to pushing the boundaries of creativity.</p>
+    <p>Frey Studios is my personal portfolio of the work I do in Design.</p>
   </section>
 
   <footer>
